[metadata]
name = github
version = 1.0.0
description = An asynchronous python wrapper around the GitHub API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VarMonke/Github-Api-Wrapper
author = VarMonke, sudosnok & contributors
author_email = var.monke@gmail.com
license = MIT
license_file = LICENSE
platform = any
project_urls =
    Issue Tracker = https://github.com/VarMonke/Github-Api-Wrapper/issues

[options]
packages = find:
python_requires = >=3.8
install_requires =
    aiohttp == 3.8.1
